--- a/ivy.xml
+++ b/ivy.xml
@@ -105,6 +105,13 @@
         <dependency org="retroweaver" name="retroweaver-rt" rev="2.0.7"
                 conf="default-jdk1.4->default"/>
 
+
+        <!-- Cube CRUD management-->
+        <dependency org="com.sun.jersey" name="jersey-bundle" rev="1.19" />
+        <!-- Database drivers-->
+        <dependency org="mysql" name="mysql-connector-java" rev="5.1.35" />
+        <dependency org="postgresql" name="postgresql" rev="9.1-901-1.jdbc4"/>
+
         <!-- Distribution Jars -->
         <dependency org="hsqldb" name="hsqldb" rev="1.8.0.10" conf="dist->default"/>
 
